force-app/main/default/objects/Scorecard_Stage_History__c/Scorecard_Stage_History__c.object-meta.xml
<CustomObject>
    <description>2025-August - These records are created automatically by Apex when Opportunity Stage is changed.</description>
    <label>Scorecard Stage History</label>
    <nameField>
        <displayFormat>SSH-{000000}</displayFormat>
        <label>Scorecard Stage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Stage History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>