force-app/main/default/objects/Scorecard_Stage_History__c/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <label>Account Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>