force-app/main/default/objects/Scorecard_Stage_History__c/fields/New_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Stage__c</fullName>
    <label>New Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>