force-app/main/default/objects/Scorecard_Stage_History__c/fields/Scorecard_Type__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Type__c</fullName>
    <label>Scorecard Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>